--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
 	--color-white: #ffffff;
 }
 
+ul{
+    list-style: none;
+}
+
 .my-margin-navbar{
     margin-left: 145px;
 }
@@ -38,12 +42,17 @@ nav{
 }
 
 #sidebar{
+    background-image: url('../img/sidebar-bg.png');
     width: 200px;
     background-color: var(--color-left-bar);
 }
 
+#sidebar ul li:hover a{
+    background-color: var(--color-gray);
+}
+
 .card-header h2{
-    font-size: 24px;
+    font-size: 20px;
 }
 
 main{
